wayland/outputdevice: schedule a done event for priority changes

BUG: 516611


(cherry picked from commit ebefbd2903b67ff86007b302e3ef1ed02e31df1e)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>